@@ -1,4 +1,4 @@
-/* Generated by re2c 0.10.6 on Tue Nov 21 20:08:15 2006 */
+/* Generated by re2c 0.12.0 on Sat May 19 16:24:01 2007 */
 #line 1 "idl.re"
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
@@ -358,7 +358,7 @@ scan(boost::wave::cpplexer::re2clex::Scanner *s)
 
 
 {
-    static unsigned char yybm[] = {
+    static const unsigned char yybm[] = {
         /* table 1 .. 8: 0 */
           0,   0,   0,   0,   0,   0,   0,   0, 
           0,  60,  32,  56,  56,  64,   0,   0, 
